# aleph

./: .env-local  .gitignore  README.md  cli.py  main.py  pyproject.toml  requirements.txt  temp.txt
aleph/: agent-chain.py  agent.py  consts.py  main.py  protocol.py  test_env.py  ui.py  utils.py
aleph/reservoir/: abstraction.py  agents.py  engine.py  main.py  orcheastrator.py  protocol.py  registry.py
spec/: product_overview.md
src/: chatbot-agent.py  percieve.py
