[project]
name = "aleph"
version = "0.1.0"
description = "Making superintelligence by building long context agents"
authors = [{ name = "sagnikc395", email = "sagnikchatterjee395@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["click (>=8.1.8,<9.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
cli = 'cli:run'
